fix: add workaround for bundling sharp (no image processing)

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -5,7 +5,7 @@ template: splash
 hero:
   tagline: How to go from a blank canvas to usable map data.
   image:
-    file: ../../assets/hot_logo.png
+    file: ../../assets/hot_logo.webp
   actions:
     - text: 1. Images
       link: /1-imagery/a-drone-tm/
