fix: update tagline for website: zero to digital map

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,9 +1,9 @@
 ---
 title: End-to-End Mapping
-description: From a blank canvas to usable map data.
+description: From zero to digital map.
 template: splash
 hero:
-  tagline: How to go from a blank canvas to usable map data.
+  tagline: From zero to digital map.
   image:
     file: ../../assets/hot_logo.webp
   actions:
