docs: correct usage of frontmatter in md files

--- a/src/content/docs/case-studies/2024-04-bali.md
+++ b/src/content/docs/case-studies/2024-04-bali.md
@@ -1,4 +1,7 @@
-# Karangasem - Risk Mapping
+---
+title: Karangasem - Risk Mapping
+description: Field mapping of the landslide risk in Sege.
+---
 
 ## Imagery Collection
 
