--- a/src/content/docs/3-field-map/a-fmtm.mdx
+++ b/src/content/docs/3-field-map/a-fmtm.mdx
@@ -3,6 +3,15 @@ title: Field Mapping Tasking Manager
 description: Tag map features in the field.
 ---
 
+## Summary
+
+- Now we have validated, AI-generated features for an area, they can be field 
+  validated and tagged.
+- As part of a field (mobile) survey, the features will be validated and tagged
+  with useful information.
+- The final validated and tagged geometries will be bulk uploaded to OSM in the
+  next step.
+
 ## Step 1: Create an account
 
 ## Extra Resources
