refactor: rename training/validation files from tm --> ml

--- a/src/content/docs/3-field-map/a-fmtm.mdx
+++ b/src/content/docs/3-field-map/a-fmtm.mdx
@@ -12,6 +12,10 @@ description: Tag map features in the field.
 - The final validated and tagged geometries will be bulk uploaded to OSM in the
   next step.
 
+:::note
+It might be useful to first validate geometries in the field using
+the Vespucci mobile app.
+
 ## Step 1: Create an account
 
 ## Extra Resources
