--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,11 +1,11 @@
 ---
-title: End-to-End Mapping
+title: Create a Digital Map
 description: From zero to digital map.
 template: splash
 hero:
-  tagline: From zero to digital map.
+  tagline: A workflow to create a digitial map of your community.
   image:
-    file: ../../assets/hot_logo.webp
+    file: ../../assets/fmtm-monrovia.jpg
   actions:
     - text: 1. Images
       link: 1-imagery/a-drone-tm/
