feat: add maplibre, custom astro components, overview section

--- a/src/content/docs/3-field-map/a-fmtm.mdx
+++ b/src/content/docs/3-field-map/a-fmtm.mdx
@@ -3,6 +3,8 @@ title: Field Mapping Tasking Manager
 description: Tag map features in the field.
 ---
 
+import AppendPropertiesToGeojsonButton from '../../../components/fmtm/geojson-properties.astro';
+
 :::tip[Summary]
 - Now we have validated, AI-generated features for an area, they can be field 
   validated and tagged.
@@ -18,6 +20,14 @@ the Vespucci mobile app.
 :::
 
 ## Step 1: Create an account
+
+## Step 2: Getting the features to map
+
+### Custom extract
+
+Appending properties:
+
+<AppendPropertiesToGeojsonButton></AppendPropertiesToGeojsonButton>
 
 ## Extra Resources
 
