--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -7,7 +7,7 @@ hero:
   image:
     file: ../../assets/fmtm-monrovia.jpg
   actions:
-    - text: 1. Images
+    - text: 1. Image
       link: 1-imagery/a-drone-tm/
       icon: right-arrow
       variant: primary
@@ -15,7 +15,7 @@ hero:
       link: 2-digitization/a-ml-training/
       icon: right-arrow
       variant: primary
-    - text: 3. Tags
+    - text: 3. Tag
       link: 3-field-map/a-fmtm/
       icon: right-arrow
       variant: primary
