--- a/src/content/docs/0-overview/b-preparation.mdx
+++ b/src/content/docs/0-overview/b-preparation.mdx
@@ -11,12 +11,56 @@ To create a map, the first thing you need is an area defined to map!
 
 Here we will generate an AOI than you wish to create a map for.
 
+Draw polygon on the map and it will be downloaded automatically.
+
 <Map
   container="maplibremap"
-  latitude="32.795595"
-  longitude="-117.259191"
-  zoom="3"
+  latitude="0"
+  longitude="0"
+  zoom="0"
   interactive="true"
-  mapstyle="https://demotiles.maplibre.org/style.json"
-  containerstyle="width: 100%; height: 70vh;"
+  draw="true"
+  geocode="true"
+  containerstyle="width: 100%; height: 70vh; margin-top: 1.5rem;"
 ></Map>
+
+{/*
+  Comment:
+  This logic could be embedded in maplibre.astro, but instead
+  we want the flexibility to swap out this component with a
+  generic web component. So instead we get the mapContainer
+  div element and then get the draw attribute from it.
+*/}
+<script>{`
+  window.addEventListener('DOMContentLoaded', () => {
+      const mapElement = document.querySelector('maplibre-astro');
+
+      const draw = mapElement.draw;
+
+      draw.on('finish', (id, context) => {
+        // Remove existing features when drawing a new one
+        let features = draw.getSnapshot();
+        if (features.length > 1) {
+          draw.removeFeatures([features[0].id]);
+        }
+
+        // Download the geojson immediately when finished drawing
+        features = draw.getSnapshot();
+        if (features.length === 1) {
+          // Remove the properties added by terra-draw, add crs key
+          const firstGeom = features[0].geometry;
+          const crsKey = {'crs': {'properties': {'name': 'urn:ogc:def:crs:EPSG::4326'}}}
+
+          const geojson = JSON.stringify({...firstGeom, ...crsKey});
+          const blob = new Blob([geojson], { type: 'application/json' });
+          const url = URL.createObjectURL(blob);
+          
+          const a = document.createElement('a');
+          a.href = url;
+          a.download = 'hotosm_e2e_aoi.geojson';
+          a.click();
+          URL.revokeObjectURL(url);
+        }
+      });
+  })
+`}</script>
