--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -3,7 +3,7 @@ title: Create a Digital Map
 description: From zero to digital map.
 template: splash
 hero:
-  tagline: A workflow to create a digitial map of your community.
+  tagline: A workflow to create a digital map of your community.
   image:
     file: ../../assets/fmtm-monrovia.jpg
   actions:
@@ -34,16 +34,15 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
     A project owner / coordinator who can pull all of the pieces together.
   </Card>
   <Card title="Drone Operators" icon="rocket">
-    Users in the area of interest with drones, and willing to generate imagery.
-    
-    The drone must be supported by Drone Tasking Manager.
+    Users in the area of interest with drones, and willing to generate imagery. The drone must be supported by Drone
+    Tasking Manager.
   </Card>
   <Card title="Remote Mappers" icon="magnifier">
-    A small team of digitisers, who use TM to generate a traning dataset for AI models.
-    
-    If this includes people with local knowledge, even better!
+    A small team of digitisers, who use TM to generate a training dataset for AI models. If this includes people with
+    local knowledge, even better!
   </Card>
   <Card title="Field Mappers" icon="farcaster">
-    A group of local people who can verify features on the ground, adding tags to them with their local knowledge, via an easy to fill out mobile survey.
+    A group of local people who can verify features on the ground, adding tags to them with their local knowledge, via
+    an easy to fill out mobile survey.
   </Card>
 </CardGrid>
