--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -5,21 +5,21 @@ template: splash
 hero:
   tagline: A workflow to create a digital map of your community.
   image:
-    file: ../../assets/fmtm-monrovia.jpg
+    file: ../../assets/e2e-summary.png
   actions:
-    - text: 1. Image
+    - text: Base Image
       link: 1-imagery/a-drone-tm/
       icon: right-arrow
       variant: primary
-    - text: 2. Map
+    - text: Digitize
       link: 2-digitization/a-ml-training/
       icon: right-arrow
       variant: primary
-    - text: 3. Tag
+    - text: Tag
       link: 3-field-map/a-fmtm/
       icon: right-arrow
       variant: primary
-    - text: 4. Use
+    - text: Access
       link: 4-data/a-extract/
       icon: right-arrow
       variant: primary
@@ -34,12 +34,11 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
     A project owner / coordinator who can pull all of the pieces together.
   </Card>
   <Card title="Drone Operators" icon="rocket">
-    Users in the area of interest with drones, and willing to generate imagery. The drone must be supported by Drone
-    Tasking Manager.
+    Users in the area of interest with drones, and willing to generate imagery. The drone must be a supported model.
   </Card>
   <Card title="Remote Mappers" icon="magnifier">
-    A small team of digitisers, who use TM to generate a training dataset for AI models. If this includes people with
-    local knowledge, even better!
+    A small team of digitisers, who generate a training dataset for AI models. If this includes people with local
+    knowledge, even better!
   </Card>
   <Card title="Field Mappers" icon="farcaster">
     A group of local people who can verify features on the ground, adding tags to them with their local knowledge, via
