docs: rename fmtm --> fieldtm in links

--- a/src/content/docs/3-field-map/a-field-tm.mdx
+++ b/src/content/docs/3-field-map/a-field-tm.mdx
@@ -1,9 +1,9 @@
 ---
-title: Field Mapping Tasking Manager
+title: Field Tasking Manager
 description: Tag map features in the field.
 ---
 
-import AppendPropertiesToGeojsonButton from '../../../components/fmtm/geojson-properties.astro';
+import AppendPropertiesToGeojsonButton from '../../../components/field-tm/geojson-properties.astro';
 
 :::tip[Summary]
 
