--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -16,7 +16,7 @@ hero:
       icon: right-arrow
       variant: primary
     - text: Tag
-      link: 3-field-map/a-fmtm/
+      link: 3-field-map/a-field-tm/
       icon: right-arrow
       variant: primary
     - text: Access
