fix: temp fix build to allow deploy

--- a/src/content/docs/3-field-map/a-field-tm.mdx
+++ b/src/content/docs/3-field-map/a-field-tm.mdx
@@ -3,7 +3,7 @@ title: Field Tasking Manager
 description: Tag map features in the field.
 ---
 
-import AppendPropertiesToGeojsonButton from '../../../components/field-tm/geojson-properties.astro';
+// import AppendPropertiesToGeojsonButton from '../../../components/field-tm/geojson-properties.astro';
 
 :::tip[Summary]
 
@@ -27,8 +27,6 @@ the Vespucci mobile app.
 ### Custom extract
 
 Appending properties:
-
-<AppendPropertiesToGeojsonButton></AppendPropertiesToGeojsonButton>
 
 ## Extra Resources
 
